# pacsClientV3

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .venvScriptsActivate.ps1  ACCESSIBILITY_REDESIGN_VIEWER_CONFIG.md  ACTION_GUIDE.txt  ADVANCED_ANALYSIS_REFACTOR.md  ADVANCED_ANALYSIS_TESTING_GUIDE.md  ADVANCED_ANALYSIS_UI_DIAGRAM.md  ADVANCED_GEOMETRY_CONTRACT_MIGRATION_TABLE.md  ADVANCED_VTK_ORIENTATION_DEEP_AUDIT.md  AIPacs.spec  AUDIT_THUMBNAIL_DOWNLOAD_PIPELINE_2026-06-01.md  AXIAL_ORDERING_FORENSIC_REPORT.md  BACKEND_GEOMETRY_BOUNDARY_AUDIT.md  BACKEND_GEOMETRY_BOUNDARY_GUARDS_REPORT.md  BUG_STALE_SERIES_ON_SERVER_UPDATE_44113.md  BUILD.md  CACHE_PIN_FIX_GUIDE.md  CHECKLIST_FREEZE_FIX.txt  CLAUDE.md  CLEANUP_AND_UNIFICATION_COMPLETE.md  COMMIT_MESSAGE_v1.04.txt  COMMIT_MESSAGE_v1.08.9.8.3.txt  COMMIT_MESSAGE_v1.09.8.2.txt  COMMIT_MESSAGE_v2.2.2.9.txt  COPILOT_REPORT_db_cleanup.md  COPILOT_TASK_db_test_isolation_and_cleanup.md  CRASH_ANALYSIS_2026-05-25.md  DATABASE_CHECK_ARCHITECTURE.txt  DEPLOYMENT_CHECKPOINT_v3.0.7_HARDENING.md  DEPLOYMENT_SUMMARY.md  DRAG_DROP_IMPLEMENTATION_REPORT.md  Document Pre-Peer for Merge.md  EAGLE_EYE_PERFORMANCE_OPTIMIZATIONS.md  FINAL_SUMMARY.md  FIX_AND_TEST_RESULTS.md  FORENSIC_ARTIFACT_INDEX.md  FORENSIC_EXACT_CODE_ROOT_CAUSE.md  (+119 more)
.github/: copilot-instructions.md
EchoMind/: ai_chat_api.py  ai_chat_config.py  ai_chat_pages.py  ai_chat_viewer.py  ai_chat_widgets.py  build.py  build_nuitka.py  echomind_main.py  llm_client.py  openai_reporter.py  v2t.py
LicenseGenerator/: build.bat  license_generator.py  license_manager.py
PacsClient/: __init__.py  app_handler.py
builder nuitka/: AIPacs_nuitka.spec.py  (+2 more)
builder/plugin package/sdk-template/: module_package.json  pyproject.toml
(+2057 files in other folders)
